--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coder-Soft</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicons/site.webmanifest">
 </head>
 <body>
 
@@ -24,7 +28,6 @@
         </p>
     </section>
 
-<!-- Skills Section -->
 <section class="skills-section">
     <h2>Skills Progress</h2>
     <div class="skill">
@@ -74,6 +77,14 @@
                 <a href="https://nova-barracuda-b6e.notion.site/Get-Yourself-Secure-40c26903dac44b78a036e7fc0d3b6a86#7ddb9d4399fa459080d0db6b837a69fa" target="_blank">
                     <button class="button">Open Article!</button>
                   </a>
+                </div>
+                <div class="project-card">
+                    <img src="assets/project_assets/G-captcha.png" alt="Project 2 Logo" class="project-logo">
+                    <h3>G-captcha</h3>
+                    <p>G-captcha, a beatiful simplified captcha.</p>
+                    <a href="https://gcaptcha.pages.dev" target="_blank">
+                        <button class="button">Open</button>
+                      </a>      
             </div>
         </div>
     </section>
@@ -88,7 +99,7 @@
         </div>
         <div class="testimonial-card">
             <img src="assets/black-rock.jfif" alt="Client 2" class="client-image">
-            <h3 class="client-name">Black Rock</h3>
+            <h3 class="client-name">Black Rockii!</h3>
             <p class="testimonial-text">"After reading <a herf="https://nova-barracuda-b6e.notion.site/Get-Yourself-Secure-40c26903dac44b78a036e7fc0d3b6a86#7ddb9d4399fa459080d0db6b837a69fa" class="link"> Get Yourself Secure</a>article, I realized how uniformed I had been!"</p>
 
         </div>
@@ -100,18 +111,26 @@
         </div>
     </div>
 </section>
-    <!-- Contact Section -->
-    <section class="contact-section">
-        <h2>Want to Use this Template?</h2>
-        <div>
-            <h3>If you want to use this protfolio website, Join The Event on Eternal BoxPvP(Partner) to get it FOR FREE.</h3>
-            <div>
-            <a href="https://discord.gg/B3GWZbGSeF" target="_blank">
-                <button class="button">Join Discord NOW!</button>
-              </a>
-            </div>
+<section class="contact-section terminal">
+    <h2 class="glitch" data-text="Access Template?">Access Template?</h2>
+    <div class="contact-content">
+        <p class="typewriter">
+            [ROOT]:To unlock this portfolio template, complete the following Tasks:
+        </p>
+        <ul class="quest-list">
+            <li>Join the Eternal BoxPvP server (our trusted ally/Parter)</li>
+            <li>Participate in the exclusive event</li>
+            <li>Claim your FREE template access files</li>
+        </ul>
+        <div class="minecraft-button">
+            <a href="https://discord.gg/B3GWZbGSeF" target="_blank" rel="noopener noreferrer">
+                <button class="pixelated">
+                    <span class="minecraft-font">&lt;/&gt; Join Discord Server</span>
+                </button>
+            </a>
         </div>
-    </section>
+    </div>
+</section>
 
 </section>
 
