--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="project-card">
                     <img src="assets/project_assets/G-captcha.png" alt="Project 2 Logo" class="project-logo">
                     <h3>G-captcha</h3>
-                    <p>G-captcha, a beatiful simplified captcha.</p>
+                    <p>G-captcha, a beatiful simplified captcha, Free & Easy Captcha, An Open Source Project.</p>
                     <a href="https://gcaptcha.pages.dev" target="_blank">
                         <button class="button">Open</button>
                       </a>      
