--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h3>G-captcha</h3>
                     <p>G-captcha, a beatiful simplified captcha, Free & Easy Captcha, An Open Source Project.</p>
                     <a href="https://gcaptcha.pages.dev" target="_blank">
-                        <button class="button">Open</button>
+                        <button class="button">Source Code</button>
                       </a>      
             </div>
         </div>
