--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="project-card">
                 <img src="assets/project_assets/Host-it.png" alt="Project 2 Logo" class="project-logo">
                 <h3>Host-IT(WIP)</h3>
-                <p>Host Static Websites For Free(Forever) Better Than Guns.LOL.</p>
+                <p>Host Static Websites For Free(Forever) This Project Might Take Some Time(Long).</p>
                 <a href="https://nova-barracuda-b6e.notion.site/Host-it-by-RuneORG-AI-013421f8e62145da90ee774c794bdd75" target="_blank">
                     <button class="button">Open Article!</button>
                   </a>
