--- a/home.html
+++ b/home.html
@@ -86,6 +86,14 @@
                         <button class="button">Source Code</button>
                       </a>      
             </div>
+            <div class="project-card">
+                <img src="assets/project_assets/diet.png" alt="Project 2 Logo" class="project-logo">
+                <h3>Tarqeeb A Recipe Finder!</h3>
+                <p>Discover AND Search delicious recipes tailored to your taste buds and dietary needs.</p>
+                <a href="https://tarqeeb.netlify.app" target="_blank">
+                    <button class="button">Search NOW!</button>
+                  </a>      
+        </div>
         </div>
     </section>
 <section class="testimonial-section">
